--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ntnu.mobiledev.mj.lab2rssreader">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,6 +20,7 @@
         </activity>
         <activity android:name=".PreferencesActivity">
         </activity>
+        <service android:name=".RSSReader" android:exported="false"/>
     </application>
 
 </manifest>
